[gd_scene load_steps=7 format=2]

[ext_resource path="res://Project/Art/GFX/Interface/PNG/metalPanel.png" type="Texture" id=1]
[ext_resource path="res://Project/Art/GFX/Interface/PNG/glassPanel.png" type="Texture" id=2]
[ext_resource path="res://Project/Art/GFX/Interface/Fonts/kenvector_future.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Project/Script/Numpad.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="Numpad" type="Popup"]
anchor_right = 0.293
anchor_bottom = 0.667
margin_right = -0.0320129
margin_bottom = -0.200043
size_flags_horizontal = 0
size_flags_vertical = 0
theme = SubResource( 2 )
script = ExtResource( 5 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 7.5
anchor_bottom = 10.0
margin_right = -1950.0
margin_bottom = -3600.0
texture = ExtResource( 1 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 7.5
anchor_bottom = 10.025
margin_left = 26.0
margin_top = 10.0
margin_right = -1974.0
margin_bottom = -3706.0
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": true
}

[node name="DisplayContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 250.0
margin_bottom = 100.0

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer/DisplayContainer"]
margin_right = 250.0
margin_bottom = 100.0
rect_min_size = Vector2( 250, 100 )
texture = ExtResource( 2 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="Display" type="Label" parent="VBoxContainer/DisplayContainer"]
margin_left = 65.0
margin_top = 36.0
margin_right = 185.0
margin_bottom = 63.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "testes"
align = 1

[node name="ButtonContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 150.0
margin_right = 250.0
margin_bottom = 294.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/ButtonContainer"]
margin_left = 61.0
margin_right = 189.0
margin_bottom = 144.0
custom_constants/hseparation = 16
columns = 3

[node name="Button1" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_right = 32.0
margin_bottom = 33.0
text = "1"

[node name="Button2" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_left = 48.0
margin_right = 80.0
margin_bottom = 33.0
text = "2"

[node name="Button3" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_left = 96.0
margin_right = 128.0
margin_bottom = 33.0
text = "3"

[node name="Button4" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_top = 37.0
margin_right = 32.0
margin_bottom = 70.0
text = "4"

[node name="Button5" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_left = 48.0
margin_top = 37.0
margin_right = 80.0
margin_bottom = 70.0
text = "5"

[node name="Button6" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_left = 96.0
margin_top = 37.0
margin_right = 128.0
margin_bottom = 70.0
text = "6"

[node name="Button7" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_top = 74.0
margin_right = 32.0
margin_bottom = 107.0
text = "7"

[node name="Button8" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_left = 48.0
margin_top = 74.0
margin_right = 80.0
margin_bottom = 107.0
text = "8"

[node name="Button9" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_left = 96.0
margin_top = 74.0
margin_right = 128.0
margin_bottom = 107.0
text = "9"

[node name="Button10" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_top = 111.0
margin_right = 32.0
margin_bottom = 144.0
text = "0"

[node name="AudioStreamPlayerNumPad" type="AudioStreamPlayer" parent="."]
